setup rubocop-shopify

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,9 @@ require:
   - rubocop-rake
   - rubocop-rspec
 
+inherit_gem:
+  rubocop-shopify: rubocop.yml
+
 AllCops:
   NewCops: enable
   TargetRubyVersion: 3.0
