--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,5 +23,5 @@ jobs:
 
       - name: Push gem to RubyGems
         env:
-          RUBYGEMS_API_KEY: ${{ secrets.RUBYGEMS_API_KEY }}
+          GEM_HOST_API_KEY: ${{ secrets.GEM_HOST_API_KEY }}
         run: gem push cardknox-*.gem
